[package]
name = "beemovie-gui"
version = "0.1.0"
authors = ["Rooster <roosterchicken@protonmail.ch>"]
edition = "2018"
description = "Bee Movie GUI written in GTK3"
repository = "https://github.com/roosterchicken/beemovie-rs"
keywords = ["gtk", "gnome", "gui", "generator", "text"]
license = "MIT"
readme = "README.md"
[features]
discord = ["reqwest", "dirs"]
notify = ["notify-rust"]
[dependencies]
beemovie = "0.1.6"
notify-rust = { version = "4", optional = true }
glib = "0.10.0"
reqwest = { version = "0.10.10", features = ["blocking"], optional = true }
dirs = { version = "3.0.1", optional = true }
[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]
[dependencies.gio]
version = "0.9.0"
features = ["v2_44"]